--- a/099/pkg/world/spawners/regionspawner/regionspawn.cfg
+++ b/099/pkg/world/spawners/regionspawner/regionspawn.cfg
@@ -1187,7 +1187,6 @@ region 208
 	rect		176 1010 284 1146
 	realm		tokuno
 	group		jungleanimals 10
-	group		junglemonsters 0
 	group		tokunoswamp	30
 }
 
@@ -1247,7 +1246,7 @@ region 215
 {
 	rect		201 769 263 812
 	realm		tokuno
-	group		yomotsuentrance	40
+	group		yomotsuentrance	10
 }
 
 //Beetlescape
@@ -1274,9 +1273,17 @@ region 218
 	group		hiryuforest	10
 }
 
-
-
-
+//Hotaka planes
+region 219
+{
+	rect		1123 757 1313 915
+	realm		tokuno
+	group		hotakaplains	5
+	group		horses		3
+	group		gaman		5
+	group		domestic		5
+	group		forestanimals	5
+}
 
 //fan dancer dojo entrance
 region 220
@@ -1326,6 +1333,105 @@ region 225
 	realm		malas
 	group		yomotsuelder	12
 	group		firebeetle		8
+}
+
+//Lake kappa
+region 226
+{
+	rect		1021 882 1113 1038
+	realm		tokuno
+	group		lakekappa	20
+}
+
+//Isamu Moongate
+region 227
+{
+	rect		1083 895 1235 1041
+	realm		tokuno
+	group		domestic		10
+	group		forestanimals	10
+	group		gaman		3
+}
+
+//Lightest Dark
+region 228
+{
+	rect		795 714 849 749
+	realm		tokuno
+	group		raiju		30
+}
+
+//Lotus lakes
+region 229
+{
+	rect		951 766 1109 878
+	realm		tokuno
+	group		domestic		5
+	group		tokunolakes	8
+	group		spiders		10
+}
+
+//Mount Hakonu
+region 230
+{
+	rect		1362 868 1406 946
+	realm		tokuno
+	group		mounthakonu		30
+	group		kappa			10
+}
+
+//Mount Hakonu
+region 231
+{
+	rect		1119 642 1200 716
+	realm		tokuno
+	group		bones	15
+	group		mounthakonu	15
+	group		revenantlion	5
+}
+
+//Storm Point
+region 232
+{
+	rect		1161 1054 1233 1107
+	realm		tokuno
+	group		stormpointbones	20
+	group		lakekappa		30
+	group		revenantlion	6
+}
+
+//Tsuki garden
+region 233
+{
+	rect		1069 475 1308 631
+	realm		tokuno
+	group		tsukigarden		30
+}
+
+//Valley of the sleeping dragon
+region 234
+{
+	rect		861 348 1061 574
+	realm		tokuno
+	group		tsukigarden		30
+}
+
+//Winter Spur
+region 235
+{
+	rect		839 103 1009 179
+	realm		tokuno
+	group		arcticanimals	10
+	group		arcticmonsters	15
+	group		ladyofthesnow	3
+}
+
+//Yamandon point
+region 236
+{
+	rect		1068 380 1115 472
+	realm		tokuno
+	group		yamandonpoint	30
 }
 
 
@@ -2684,8 +2790,8 @@ group yomotsuentrance
 {
 	npc	:tokuno:yomotsuwarrior
 	npc	:tokuno:yomotsuwarrior
-	npc	:tokuno:yomotsuwarrior
 	npc 	:overlandmobs:mongbat
+	npc	:elementals:earthelemental	
 	npc	:elementals:earthelemental	
 }
 
@@ -2719,5 +2825,140 @@ group hiryuforest
 	npc	:tokuno:eliteninja
 	npc	:tokuno:kazekemono
 	npc	:tokuno:kazekemono
+}
+
+group hotakaplains
+{
+	npc	:tokuno:hiryu
+	npc	:tokuno:hiryu
+	npc	:tokuno:hiryu
+	npc	:tokuno:lesserhiryu
+	npc	:tokuno:lesserhiryu
+	npc	:tokuno:lesserhiryu
+	npc	:tokuno:lesserhiryu
+	npc	:tokuno:lesserhiryu
+	npc	:tokuno:lesserhiryu
+	npc	:tokuno:eliteninja
+	npc	:tokuno:eliteninja
+	npc	:tokuno:eliteninja
+	npc	:tokuno:eliteninja
+	npc	:tokuno:eliteninja
+	npc	:tokuno:eliteninja
+	npc	:tokuno:eliteninja
+	npc	:tokuno:eliteninja
+	npc	:tokuno:oni
+}
+
+group lakekappa
+{
+	npc	:tokuno:kappa
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:crane
+	npc	:tokuno:crane
+	npc	:tokuno:crane
+}
+
+group spiders
+{
+	npc	:overlandmobs:spider
+	npc	:overlandmobs:spider
+	npc	:overlandmobs:spider
+	npc	:overlandmobs:spider
+	npc	:overlandmobs:spider
+	npc	:overlandmobs:phasespider
+	npc	:overlandmobs:phasespider
+	npc	:overlandmobs:phasespider
+}
+
+group tokunolakes
+{
+	npc	:tokuno:crane
+	npc	:tokuno:crane
+	npc	:tokuno:crane
+	npc	:tokuno:crane
+	npc	:tokuno:crane
+	npc	:tokuno:kappa
+	npc	:tokuno:kappa
+	npc	:tokuno:kappa
+}
+
+group crane
+{
+	npc	:tokuno:crane
+}
+
+group kappa
+{
+	npc	:tokuno:kappa
+}
+
+group mounthakonu
+{
+	npc 	:dragons:firelizard
+	npc 	:dragons:firelizard
+	npc 	:dragons:firelizard
+	npc 	:dragons:firelizard
+	npc 	:dragons:firelizard
+	npc 	:diablo:hellhound
+	npc 	:diablo:hellhound
+	npc 	:diablo:hellhound
+	npc 	:diablo:hellhound
+	npc 	:diablo:hellhound
+	npc	:elementals:fireelemental
+	npc	:elementals:fireelemental
+	npc	:elementals:fireelemental
+}
+
+group stormpointbones
+{
+	npc	:undead:bonewarlock
+	npc	:undead:bonemage
+}
+
+group tsukigarden
+{
+	npc	:tokuno:tsukiwolf
+	npc	:tokuno:tsukiwolf
+	npc	:tokuno:tsukiwolf
+	npc	:wild_animals:wolf
+	npc	:wild_animals:wolf
+	npc	:wild_animals:wolf
+	npc	:wild_animals:wolf
+	npc	:wild_animals:wolf
+	npc	:overlandmobs:direwolf
+	npc	:overlandmobs:direwolf
+	npc	:overlandmobs:direwolf
+	npc	:overlandmobs:direwolf
+	npc	:overlandmobs:reaper
+	npc	:overlandmobs:reaper
+	npc	:domestic_animals:llama
+	npc	:domestic_animals:llama
+	npc	:wild_animals:bear
+	npc	:wild_animals:bear
+	npc	:wild_animals:blackbear
+	npc	:wild_animals:blackbear
+}	
+
+group ladyofthesnow
+{
+	npc	:tokuno:ladyofthesnow
+}
+
+group yamandonpoint
+{
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:deathwatchbeetle
+	npc	:tokuno:runebeetle
+	npc	:tokuno:runebeetle
+	npc	:tokuno:yamandon
+	npc	:tokuno:yamandon
+	
 }
 
