--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/menu.cfg
@@ -12,7 +12,7 @@ Item armor
 	Submenu	0x13EC	ringmail	Ringmail
 	Submenu	0x1412	helms		Helmets
 	Submenu	0x1b75	shields	Shields
-//	Submenu	0x1415	tokunoplate	Plate Yoroi
+	Submenu	0x1415	tokunoplate	Plate Yoroi
 //	Submenu	0x1415	gargisharmor	Gargish Plate
 }
 
@@ -50,8 +50,8 @@ Item helms
 	Entry	0x140c	Bascinet
 	Entry	0x140e	Nose Helm
 	Entry	0x1412	Plate Helm
-//	Entry	0x27bf	Mail Hatsuburi
-//	Entry	0x27c0	Plate Hatsuburi
+	Entry	0x27bf	Mail Hatsuburi
+	Entry	0x27c0	Plate Hatsuburi
 	Entry	0x2b6e	Circlet
 	Entry	0x2b6f	Royal Circlet
 	Entry	0x2b70	Gemmed Circlet
@@ -65,7 +65,7 @@ Item weapons
 	Submenu	0x0f4e	polearms	Polearms
 	Submenu	0x0f51	lightblades	Light Blades
 	Submenu	0x1402	elvenweapons	Elven Weapons
-//	Submenu	0x1402	tokunoweapons	Tokuno Weapons
+	Submenu	0x1402	tokunoweapons	Tokuno Weapons
 //	Submenu	0x1415	gargishlight	Gargish Light
 //	Submenu	0x1415	gargishmedium	Gargish Medium
 //	Submenu	0x1415	gargishheavy	Gargish Heavy
