--- a/trunk/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
+++ b/trunk/099/pkg/skills/craftingskills/carpentry/carpentry.cfg
@@ -586,15 +586,6 @@ carpentry 0x1706a
 	time			5
 }
 
-carpentry 0x2d31
-{ 
-	Name			a wild staff
-	material		30
-	skill		70
-	has_quality	1
-	time			5
-}
-
 
 
 ///////////////////
@@ -727,6 +718,50 @@ Element 0x26c3
 	time			9
 }
 
+///////////////
+// Samurai Empire weapons
+///////////////
+carpentry 0X27a6
+{ 
+	Name			a tetsubo
+	material		40
+	skill		90
+	has_quality	1
+	time			7
+}
+
+carpentry 0X27a8
+{ 
+	Name			a bokuto
+	material		40
+	skill		70
+	has_quality	1
+	time			7
+}
+
+carpentry 0X27ae
+{ 
+	Name			nunchaku
+	material		40
+	skill		90
+	has_quality	1
+	time			7
+}
+
+Element 0x27f0
+{
+	Name			a yumi
+	Material		15
+	skill		70
+	has_quality	1
+	time			7
+}
+
+
+//////////
+// Mondain's Legacy weapons
+//////////
+
 Element 0x2d2a
 {
 	Name			elven composite longbow
@@ -744,6 +779,16 @@ Element 0x2d2b
 	has_quality	1
 	time			9
 }
+
+carpentry 0x2d31
+{ 
+	Name			a wild staff
+	material		30
+	skill		70
+	has_quality	1
+	time			5
+}
+
 
 ///////////////////
 //  woodland armor
