--- a/trunk/099/pkg/skills/craftingskills/carpentry/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/carpentry/menu.cfg
@@ -109,6 +109,9 @@ Item woodenweapons
 	Entry	0x0df0	Black Staff
 	Entry	0x13b3	Club
 	Entry 0x2d31	Wild Staff
+	Entry 0x27a6	Tetsubo
+	Entry 0x27a8	Bokuto
+	Entry 0x27ae	Nunchaku
 }
 
 Item addons
@@ -134,6 +137,7 @@ Item archeryitems
 	Entry 0x26c3	Repeating Crossbow
 	Entry 0x2d2a	Elven Longbow
 	Entry 0x2d2b	Elven Shortbow
+	Entry 0x27f0	Yumi
 }
 
 Item woodenarmor
