--- a/trunk/099/pkg/skills/craftingskills/carpentry/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/carpentry/menu.cfg
@@ -69,6 +69,7 @@ Item instruments
 	Entry	0x0e9c	Drum
 	Entry	0x0eb2	Harp
 	Entry	0x0eb1	Standing Harp
+	Entry	0x2805	Bamboo Flute
 }
 
 Item storage
