- Implemented Mana and Stamina regeneration bonuses from Meditation and Focus skills. - Adjusted Dex Penalty of Plate Hiro Sode. - Some more fixes to .grab command. Hopefully the container info will be displayed properly this time. - Added handling of house teleporters in Custom Houses. - Tooltips should no longer display Weight for signs. - Adjusted the AR rating of several Tokuno monsters. - Added Bamboo flute to the Carpentry menu. - Some adjustments to Tokuno spawn.

--- a/099/pkg/skills/craftingskills/carpentry/menu.cfg
+++ b/099/pkg/skills/craftingskills/carpentry/menu.cfg
@@ -69,6 +69,7 @@ Item instruments
 	Entry	0x0e9c	Drum
 	Entry	0x0eb2	Harp
 	Entry	0x0eb1	Standing Harp
+	Entry	0x2805	Bamboo Flute
 }
 
 Item storage
