--- a/099/pkg/world/spawners/regionspawner/regionspawn.cfg
+++ b/099/pkg/world/spawners/regionspawner/regionspawn.cfg
@@ -1246,7 +1246,7 @@ region 215
 {
 	rect		201 769 263 812
 	realm		tokuno
-	group		yomotsuentrance	10
+	group		yomotsuentrance	20
 }
 
 //Beetlescape
@@ -1380,7 +1380,7 @@ region 230
 	group		kappa			10
 }
 
-//Mount Hakonu
+//Mount Sho
 region 231
 {
 	rect		1119 642 1200 716
@@ -2918,7 +2918,6 @@ group stormpointbones
 
 group tsukigarden
 {
-	npc	:tokuno:tsukiwolf
 	npc	:tokuno:tsukiwolf
 	npc	:tokuno:tsukiwolf
 	npc	:wild_animals:wolf
