--- a/trunk/099/pkg/attributes/config/attributes.cfg
+++ b/trunk/099/pkg/attributes/config/attributes.cfg
@@ -48,6 +48,7 @@ Attribute Camping
 
 Attribute Carpentry
 {
+	Alias Woodworking
 }
 
 Attribute Cartography
@@ -95,6 +96,7 @@ Attribute Fishing
 Attribute Hiding
 {
 	script :hiding:hiding
+	Unhides	0
 }
 
 Attribute Provocation
@@ -168,6 +170,7 @@ Attribute Tinkering
 Attribute Tracking
 {
 	script :tracking:tracking
+	Unhides	0
 }
 
 Attribute Swordsmanship
