--- a/trunk/099/pkg/skills/harvestingskills/lumberjacking/itemdesc.cfg
+++ b/trunk/099/pkg/skills/harvestingskills/lumberjacking/itemdesc.cfg
@@ -3,6 +3,7 @@ Item 0x1BDD
 	Name			log
 	VendorSellsFor	5
 	VendorBuysFor	1
+	Type			wood
 	Weight		1/2
 }
 
@@ -12,6 +13,8 @@ Item 0x15020
 	Graphic		0x1BDD
 	Color			1190
 	Desc			oak log
+	Type			wood
+	Difficulty		60
 	Weight		1/2
 }
 
@@ -21,6 +24,8 @@ Item 0x15021
 	Graphic		0x1BDD
 	Color			1191
 	Desc			ash log
+	Type			wood
+	Difficulty		75
 	Weight		1/2
 }
 
@@ -30,6 +35,8 @@ Item 0x15022
 	Graphic		0x1BDD
 	Color			1192
 	Desc			yew log
+	Type			wood
+	Difficulty		90
 	Weight		1/2
 }
 
@@ -39,6 +46,8 @@ Item 0x15023
 	Graphic		0x1BDD
 	Color			1193
 	Desc			heartwood log
+	Type			wood
+	Difficulty		98
 	Weight		1/2
 }
 
@@ -48,6 +57,8 @@ Item 0x15024
 	Graphic		0x1BDD
 	Color			1194
 	Desc			bloodwood log
+	Type			wood
+	Difficulty		98
 	Weight		1/2
 }
 
@@ -57,6 +68,8 @@ Item 0x15025
 	Graphic		0x1BDD
 	Color			1195
 	Desc			frostwood log
+	Type			wood
+	Difficulty		98
 	Weight		1/2
 }
 
@@ -66,6 +79,8 @@ Item 0x15026
 	Graphic		0x1BDD
 	Color			1196
 	Desc			sunwood log
+	Type			wood
+	Difficulty		98
 	Weight		1/2
 }
 
