- Added a new Crafting Menus system - Added the new woodworking package for replacing the old carpentry package. - Beginning to add support for Alchemy as a tradeskill. - Advanced Potions no longer require an Alchemy skillcheck for safe usage. - Started work on adding the new menus to the other skills. - Enabled the Focus skill. - Implemented Focus regeneration bonus to Mana.

--- a/099/pkg/attributes/config/attributes.cfg
+++ b/099/pkg/attributes/config/attributes.cfg
@@ -48,6 +48,7 @@ Attribute Camping
 
 Attribute Carpentry
 {
+	Alias Woodworking
 }
 
 Attribute Cartography
@@ -95,6 +96,7 @@ Attribute Fishing
 Attribute Hiding
 {
 	script :hiding:hiding
+	Unhides	0
 }
 
 Attribute Provocation
@@ -168,6 +170,7 @@ Attribute Tinkering
 Attribute Tracking
 {
 	script :tracking:tracking
+	Unhides	0
 }
 
 Attribute Swordsmanship
