--- a/099/pkg/items/containers/itemdesc.cfg
+++ b/099/pkg/items/containers/itemdesc.cfg
@@ -521,7 +521,7 @@ Container 0x0a4d
 Container 0x0a30
 {
 	Name				ChestDrawerDark
-	Gump				0x0051
+	Gump				0x0048
 	MinX				20
 	MaxX				60
 	MinY				20
@@ -779,6 +779,10 @@ Container 0x2bdb
 //	OldObjtype 0x278b
 }
 
+////////////
+// New items
+////////////
+
 Container 0x3171
 {
 	Name				quiver
@@ -800,3 +804,360 @@ Container 0x3171
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
 }
+
+Container 0x24d5
+{
+	Name				tokunobasket
+	Gump				0x003F
+	MinX				44
+	MaxX				143
+	MinY				65
+	MaxY				140
+	RequiresAttention	0
+	VendorSellsFor		35
+	VendorBuysFor		10
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x24d7
+{
+	Name				tokunobasket2
+	Gump				0x003F
+	MinX				44
+	MaxX				143
+	MinY				65
+	MaxY				140
+	RequiresAttention	0
+	VendorSellsFor		35
+	VendorBuysFor		10
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x24d8
+{
+	Name				tokunobasket3
+	Gump				0x003F
+	MinX				44
+	MaxX				143
+	MinY				65
+	MaxY				140
+	RequiresAttention	0
+	VendorSellsFor		35
+	VendorBuysFor		10
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x24d9
+{
+	Name				tokunobasket3
+	Gump				0x0108
+	MinX				44
+	MaxX				143
+	MinY				65
+	MaxY				140
+	RequiresAttention	0
+	VendorSellsFor		35
+	VendorBuysFor		10
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x24db
+{
+	Name				tokunobasket4
+	Gump				0x0108
+	MinX				44
+	MaxX				143
+	MinY				65
+	MaxY				140
+	RequiresAttention	0
+	VendorSellsFor		35
+	VendorBuysFor		10
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x24dd
+{
+	Name				tokunobasket5
+	Gump				0x0108
+	MinX				44
+	MaxX				143
+	MinY				65
+	MaxY				140
+	RequiresAttention	0
+	VendorSellsFor		35
+	VendorBuysFor		10
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x280b
+{
+	Name				plainwoodenchest
+	Desc				a plain wooden chest
+	Gump				0x0109
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x280d
+{
+	Name				ornatewoodenchest
+	Desc				an ornate wooden chest
+	Gump				0x010a
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x280f
+{
+	Name				gildedwoodenchest
+	Desc				a gilded wooden chest
+	Gump				0x010a
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x2811
+{
+	Name				woodenfootlocker
+	Desc				a wooden footlocker
+	Gump				0x010b
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x2813
+{
+	Name				finishedwoodenchest
+	Desc				a finished wooden chest
+	Gump				0x010b
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x2815
+{
+	Name				tallcabinet
+	Desc				a tall cabinet
+	Gump				0x010c
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x2817
+{
+	Name				shortcabinet
+	Desc				a short cabinet
+	Gump				0x010c
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x2857
+{
+	Name				redarmoire
+	Desc				a red armoire
+	Gump				0x010e
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x2859
+{
+	Name				elegantarmoire
+	Desc				an elegant armoire
+	Gump				0x010c
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x285b
+{
+	Name				maplearmoire
+	Desc				a maple armoire
+	Gump				0x010d
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
+Container 0x285d
+{
+	Name				tokunocherryarmoire
+	Desc				a cherry armoire
+	Gump				0x010e
+	MinX				20
+	MaxX				60
+	MinY				20
+	MaxY				60
+	RequiresAttention	0	
+	VendorSellsFor		120
+	VendorBuysFor		50
+	Movable			1
+	Weight			5
+	MaxItems			65535
+	Maxweight			65535
+	OnRemoveScript		onremove_chest
+	CanRemoveScript	canremove_chest
+	OnInsertScript		oninsert_chest
+	CanInsertScript	caninsert_chest
+}
+
