--- a/099/pkg/skills/skillmaster.cfg
+++ b/099/pkg/skills/skillmaster.cfg
@@ -4,6 +4,7 @@ skill 0
 	script :alchemy:tasteid
 	desc Alchemy
 	title Alchemist
+	tradeskill 0
 }
 
 skill 1
@@ -415,7 +416,7 @@ skill 50
 {
 	name Focus
 	script
-	desc
+	desc Focus
 	title Warrior
 	tradeskill 0
 }
