--- a/099/pkg/skills/craftingskills/tailoring/itemdesc.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/itemdesc.cfg
@@ -100,6 +100,7 @@ Item 0x0E1D
 Item 0x1078
 {
 	Name				hide
+	Type				hide
 	VendorSellsFor		8
 	VendorBuysFor		3
 	Weight			1/10
@@ -109,6 +110,7 @@ Item 0x17050
 {
 	Name				brownhide
 	Desc				rat hide%s
+	Type				hide
 	Weight			1/10
 	Graphic			0x1078
 	Color			0x07e2
@@ -120,6 +122,7 @@ Item 0x17051
 {
 	Name				redhide
 	Desc				dragon hide%s
+	Type				hide
 	Weight			1/10
     	Graphic			0x1078
     	Color			0x0676
@@ -131,6 +134,7 @@ Item 0x17052
 {
 	Name				bluehide
 	Desc				troll hide%s
+	Type				hide
 	Weight			1/10
 	Graphic			0x1078
 	Color			0x054a
@@ -142,6 +146,7 @@ Item 0x17053
 {
 	Name				greenhide
 	Desc				lizard hide%s
+	Type				hide
 	Weight			1/10
 	Graphic			0x1078
     	Color			0x0852
@@ -153,6 +158,7 @@ Item 0x17054
 {
 	Name				silverhide
 	Desc				serpent hide%s
+	Type				hide
 	Weight			1/10
 	Graphic			0x1078
     	Color			0x08fd
@@ -170,6 +176,7 @@ Item 0x17054
 Item 0x0F95
 {
 	Name				boltofcloth
+	Type				cloth
 	VendorSellsFor		60
 	VendorBuysFor		35
 	weight			5
@@ -178,6 +185,7 @@ Item 0x0F95
 Item 0x1765
 {
 	Name				cloth
+	Type				cloth
 	script			use_cloth
 	weight			1/10
 }
