--- a/099/pkg/skills/craftingskills/woodworking/config/itemdesc.cfg
+++ b/099/pkg/skills/craftingskills/woodworking/config/itemdesc.cfg
@@ -1,11 +1,11 @@
 ///////////////////
-//  Carpentry tools
+//  woodworking tools
 ///////////////////
 
 Item  0x1035
 {
 	Name			Saw
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	30
 	VendorBuysFor	10
 }
@@ -13,7 +13,7 @@ Item  0x1035
 Item  0x1028
 {
 	Name			Dovetailsaw
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	22
 	VendorBuysFor	7
 }
@@ -21,7 +21,7 @@ Item  0x1028
 Item  0x10e4
 {
 	Name			drawknife
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	12
 	VendorBuysFor	4
 }
@@ -29,7 +29,7 @@ Item  0x10e4
 Item  0x10e5
 {
 	Name			Froe
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	12
 	VendorBuysFor	4
 }
@@ -37,7 +37,7 @@ Item  0x10e5
 Item  0x10e6
 {
 	Name			inshave
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	10
 	VendorBuysFor	3
 }
@@ -45,7 +45,7 @@ Item  0x10e6
 Item  0x10e7
 {
 	Name			Scorp
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	12
 	VendorBuysFor	4
 }
@@ -53,7 +53,7 @@ Item  0x10e7
 Item  0x1030
 {
 	Name			Jointingplane
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	25
 	VendorBuysFor	8
 }
@@ -61,7 +61,7 @@ Item  0x1030
 Item  0x102c
 {
 	Name			mouldingplane
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	25
 	VendorBuysFor	8
 }
@@ -69,7 +69,7 @@ Item  0x102c
 Item  0x1032
 {
 	Name			Smoothingplane
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	27
 	VendorBuysFor	9
 }
@@ -77,7 +77,7 @@ Item  0x1032
 Item 0x102a
 {
 	Name			Hammer
-	Script		carpentry
+	Script		woodworking
 	VendorSellsFor	30
 	VendorBuysFor	10
 }
@@ -179,7 +179,7 @@ Item 0x1BD4
 
 
 ///////////////////
-//  Carpentry made furniture that should probably be somewhere else
+//  woodworking made furniture that should probably be somewhere else
 ///////////////////
 
 Item 0X1ad7
