--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
@@ -91,6 +91,7 @@ Craftitem Containers
 	Item	woodenfootlocker
 	Item	finishedwoodenchest
 	Item	tallcabinet
+	Item	shortcabinet
 	Item	redarmoire
 	Item	elegantarmoire
 	Item	maplearmoire
