- Added the short cabinet, had forgotten to do that. Also forgot to mention I added most of the Samurai Empire wood craftables. - Added carpentry.inc again, as it is needed by tinkering. Once everything has migrated to the new menu system, it will finally disappear.

--- a/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
+++ b/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
@@ -91,6 +91,7 @@ Craftitem Containers
 	Item	woodenfootlocker
 	Item	finishedwoodenchest
 	Item	tallcabinet
+	Item	shortcabinet
 	Item	redarmoire
 	Item	elegantarmoire
 	Item	maplearmoire
