--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
@@ -850,6 +850,78 @@ Element 0x27f0
 /////////////
 // Samura Empire furniture
 ////////////
+carpentry 0x24bc
+{ 
+	Name			a shoji lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+}
+
+carpentry 0x24be
+{ 
+	Name			a paper lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+}
+
+carpentry 0x24c0
+{ 
+	Name			a statue lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+}
+
+carpentry 0x24c2
+{ 
+	Name			a red hanging lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+}
+
+carpentry 0x24c6
+{ 
+	Name			a white hanging lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+}
+
+carpentry 0x24ca
+{ 
+	Name			a round paper lantern
+	Type			wood
+	material		20
+	skill		65
+	time			6
+}
+
+carpentry 0x24cb
+{ 
+	Name			a shoji screen
+	Type			wood
+	material		75
+	skill		80
+	time			6
+}
+
+carpentry 0x24d0
+{ 
+	Name			a bamboo screen
+	Type			wood
+	material		75
+	skill		80
+	time			6
+}
+
 carpentry 0x280b
 { 
 	Name			a plain wooden chest
