- Added the Samurai Empire lanterns. - Added the shoji screen and bamboo screen. - Moved the wooden shields to the Armor section.

--- a/099/pkg/items/decorations/itemdesc.cfg
+++ b/099/pkg/items/decorations/itemdesc.cfg
@@ -1486,9 +1486,21 @@ Item 0xa0b0
 //	OldObjtype		0x284f
 }
 
+///////////////////
+// Samurai Empire
+///////////////////
 
+Item 0x24cb
+{
+	Name			shojiscreen
+	script			rotate
+}
 
-
+Item 0x24d0
+{
+	Name			bambooscreen
+	script			rotate
+}
 
 
 
