--- a/099/pkg/items/decorations/rotate.cfg
+++ b/099/pkg/items/decorations/rotate.cfg
@@ -1325,4 +1325,112 @@ graphic 0x2375
 	newgraphic 0x2374
 }
 
+graphic 0x24cb
+{
+	//shojiscreen
+	newgraphic 0x24cc
+}
+
+graphic 0x24cc
+{
+	//shojiscreen
+	newgraphic 0x24cd
+}
+
+graphic 0x24cd
+{
+	//shojiscreen
+	newgraphic 0x24ce
+}
+
+graphic 0x24ce
+{
+	//shojiscreen
+	newgraphic 0x24cf
+}
+
+graphic 0x24cf
+{
+	//shojiscreen
+	newgraphic 0x24cb
+}
+
+graphic 0x24d0
+{
+	//bambooscreen
+	newgraphic 0x24d1
+}
+
+graphic 0x24d1
+{
+	//bambooscreen
+	newgraphic 0x24d2
+}
+
+graphic 0x24d2
+{
+	//bambooscreen
+	newgraphic 0x24d3
+}
+
+graphic 0x24d3
+{
+	//bambooscreen
+	newgraphic 0x24d4
+}
+
+graphic 0x24d4
+{
+	//bambooscreen
+	newgraphic 0x24d0
+}
+
+graphic 0x24c1
+{
+	//redhanginglantern
+	newgraphic 0x24c3
+}
+
+graphic 0x24c2
+{
+	//redhanginglantern
+	newgraphic 0x24c4
+}
+
+graphic 0x24c3
+{
+	//redhanginglantern
+	newgraphic 0x24c1
+}
+
+graphic 0x24c4
+{
+	//redhanginglantern
+	newgraphic 0x24c2
+}
+
+graphic 0x24c5
+{
+	//whitehanginglantern
+	newgraphic 0x24c7
+}
+
+graphic 0x24c6
+{
+	//whitehanginglantern
+	newgraphic 0x24c8
+}
+
+graphic 0x24c7
+{
+	//whitehanginglantern
+	newgraphic 0x24c5
+}
+
+graphic 0x24c8
+{
+	//whitehanginglantern
+	newgraphic 0x24c6
+}
+
 
