--- a/099/pkg/items/lighting/itemdesc.cfg
+++ b/099/pkg/items/lighting/itemdesc.cfg
@@ -602,5 +602,160 @@ Item 0xa038
 	SaveOnExit 0
 }
 
+//////////////
+// Samurai Empire
+//////////////
+
+item 0x24bb
+{
+	name			shojilanternlit
+	script		torch
+	facing		29
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24bc
+{
+	name			shojilantern
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24bd
+{
+	name			paperlanternlit
+	script		torch
+	facing		29
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24be
+{
+	name			paperlantern
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24bf
+{
+	name			statuelanternlit
+	script		torch
+	facing		29
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c0
+{
+	name			statuelantern
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c1
+{
+	name			redhanginglanternlit
+	script		torch
+	facing		29
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c2
+{
+	name			redhanginglantern
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c3
+{
+	name			redhanginglanternlit2
+	script		torch
+	facing		29
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c4
+{
+	name			redhanginglantern2
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c5
+{
+	name			whitehanginglanternlit
+	script		torch
+	facing		29
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c6
+{
+	name			whitehanginglantern
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c7
+{
+	name			whitehanginglanternlit2
+	script		torch
+	facing		29
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c8
+{
+	name			whitehanginglantern2
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24c9
+{
+	name			roundpaperlanternlit
+	script		torch
+	facing		29
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
+
+item 0x24ca
+{
+	name			roundpaperlantern
+	script		torch
+	movable		1
+	weight		1
+	RequiresAttention	0
+}
 
 
