--- a/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
+++ b/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
@@ -102,12 +102,18 @@ Craftitem Miscelaneous
 {
 	Item	Kindling
 	Item	RecallRune
-	Item	WoodenShield 
-	Item	KiteShieldB1
 	Item	ClockFrame
 	Item	Torch
 	Item	FishingPole
 	Item	Broom
+	Item	shojiscreen
+	Item	bambooscreen
+	Item	shojilantern
+	Item	paperlantern
+	Item	roundpaperlantern
+	Item	statuelantern
+	Item	redhanginglantern
+	Item	whitehanginglantern
 }
 
 Craftitem Weapons
@@ -152,6 +158,8 @@ Craftitem Archery
 
 Craftitem Armor
 {
+	Item	WoodenShield 
+	Item	KiteShieldB1
 	Item	WoodlandGorget
 	Item	WoodlandGauntlets
 	Item	WoodlandArms
