- Some more work for sailing in Tokuno. - A few adjustment to container gump areas. - Added a few deeded elven items to old deeds. - Added the new containers to the rotate script. - Alchemy is now a tradeskill. - Cooking skill now recognizes the Elven Stove as an oven. - Added the Autoloop package for the new crafting system. - Added the Axe Thrower to the list of Tailoring craftables. - Added the shuriken, throwing dart, and throwing axe to the list of Tinkering craftables. - Added support for elven forge and gargish soulforge to the smelting script.

--- a/099/pkg/items/containers/itemdesc.cfg
+++ b/099/pkg/items/containers/itemdesc.cfg
@@ -249,10 +249,10 @@ Container 0x0E75
 {
 	Name				Backpack
 	Gump				0x003C
-	MinX				44
-	MaxX				143
-	MinY				65
-	MaxY				140
+	MinX				20
+	MaxX				163
+	MinY				20
+	MaxY				160
 	RequiresAttention	0
 	VendorSellsFor		27
 	VendorBuysFor		11
@@ -268,8 +268,8 @@ Container 0x0E76
 {
 	Name				Bag
 	Gump				0x003D
-	MinX				40
-	MaxX				60
+	MinX				20
+	MaxX				80
 	MinY				20
 	MaxY				80
 	RequiresAttention	0
@@ -306,11 +306,11 @@ Container 0x0E77
 Container 0x0E79
 {
 	Name				Pouch
-	Gump				0x0040
+	Gump				0x003C
 	MinX				20
-	MaxX				100
-	MinY				40
-	MaxY				80
+	MaxX				163
+	MinY				20
+	MaxY				160
 	RequiresAttention	0
 	VendorSellsFor		12
 	VendorBuysFor		5
@@ -864,7 +864,7 @@ Container 0x24d8
 
 Container 0x24d9
 {
-	Name				tokunobasket3
+	Name				tokunobasket4
 	Gump				0x0108
 	MinX				44
 	MaxX				143
@@ -883,7 +883,7 @@ Container 0x24d9
 
 Container 0x24db
 {
-	Name				tokunobasket4
+	Name				tokunobasket5
 	Gump				0x0108
 	MinX				44
 	MaxX				143
@@ -902,7 +902,7 @@ Container 0x24db
 
 Container 0x24dd
 {
-	Name				tokunobasket5
+	Name				tokunobasket6
 	Gump				0x0108
 	MinX				44
 	MaxX				143
