--- a/099/pkg/items/decorations/rotate.cfg
+++ b/099/pkg/items/decorations/rotate.cfg
@@ -1433,4 +1433,172 @@ graphic 0x24c8
 	newgraphic 0x24c6
 }
 
+graphic 0x24d5
+{
+	//tokunobasket
+	newgraphic 0x24d6
+}
+
+graphic 0x24d6
+{
+	//tokunobasket
+	newgraphic 0x24d5
+}
+
+graphic 0x24d9
+{
+	//tokunobasket4
+	newgraphic 0x24da
+}
+
+graphic 0x24da
+{
+	//tokunobasket4
+	newgraphic 0x24d9
+}
+
+graphic 0x24db
+{
+	//tokunobasket5
+	newgraphic 0x24dc
+}
+
+graphic 0x24dc
+{
+	//tokunobasket5
+	newgraphic 0x24db
+}
+
+graphic 0x280b
+{
+	//plainwoodenchest
+	newgraphic 0x280c
+}
+
+graphic 0x280c
+{
+	//plainwoodenchest
+	newgraphic 0x280b
+}
+
+graphic 0x280d
+{
+	//ornatewoodenchest
+	newgraphic 0x280e
+}
+
+graphic 0x280e
+{
+	//ornatewoodenchest
+	newgraphic 0x280d
+}
+
+graphic 0x280f
+{
+	//gildedwoodenchest
+	newgraphic 0x2810
+}
+
+graphic 0x2810
+{
+	//gildedwoodenchest
+	newgraphic 0x280f
+}
+
+graphic 0x2811
+{
+	//woodenfootlocker
+	newgraphic 0x2812
+}
+
+graphic 0x2812
+{
+	//woodenfootlocker
+	newgraphic 0x2811
+}
+
+graphic 0x2813
+{
+	//finishedwoodenchest
+	newgraphic 0x2814
+}
+
+graphic 0x2814
+{
+	//finishedwoodenchest
+	newgraphic 0x2813
+}
+
+graphic 0x2815
+{
+	//tallcabinet
+	newgraphic 0x2816
+}
+
+graphic 0x2816
+{
+	//tallcabinet
+	newgraphic 0x2815
+}
+
+graphic 0x2817
+{
+	//shortcabinet
+	newgraphic 0x2818
+}
+
+graphic 0x2818
+{
+	//shortcabinet
+	newgraphic 0x2817
+}
+
+graphic 0x2857
+{
+	//redarmoire
+	newgraphic 0x2858
+}
+
+graphic 0x2858
+{
+	//redarmoire
+	newgraphic 0x2857
+}
+
+graphic 0x2859
+{
+	//elegantarmoire
+	newgraphic 0x285a
+}
+
+graphic 0x285a
+{
+	//elegantarmoire
+	newgraphic 0x2859
+}
+
+graphic 0x285b
+{
+	//maplearmoire
+	newgraphic 0x285c
+}
+
+graphic 0x285c
+{
+	//maplearmoire
+	newgraphic 0x285b
+}
+
+graphic 0x285d
+{
+	//tokunocherryarmoire
+	newgraphic 0x285e
+}
+
+graphic 0x285e
+{
+	//tokunocherryarmoire
+	newgraphic 0x285d
+}
+
 
