--- a/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
@@ -544,6 +544,16 @@ leather 0X2790
 	bulk_deed		0
 }
 
+leather 0X27db
+{ 
+	Name			axe thrower
+	material		30
+	skill		90
+	time			4
+	hasquality	1
+	bulk_deed		0
+}
+
 leather 0x27dd
 {
 	name		leather ninja mitts
