--- a/099/pkg/skills/craftingskills/tailoring/menu.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/menu.cfg
@@ -212,6 +212,7 @@ Item ninja_gear
 	Entry	0x27d9	Leather Ninja Hood
 	Entry	0x2790	Shuriken Thrower
 	Entry	0x27f5	Dart Thrower
+	Entry	0x27db	Axe Thrower
 }
 
 Item leather_yoroi
