--- a/099/pkg/world/gumps/config/GumpInfo.cfg
+++ b/099/pkg/world/gumps/config/GumpInfo.cfg
@@ -4,36 +4,38 @@
 elem Defaults
 {
 	FontColor		0x5FF	// White
-	BackGround		0x53	// SILVER_TRIM
-	ForeGround		0x1400	// DARK_STONE
+//	BackGround		0x53	// SILVER_TRIM
+//	ForeGround		0x1400	// DARK_STONE
 //	BackGround		0xE10	// BLUESLAB
 //	ForeGround		0x13BE	// STONESLAB
+	BackGround		0x53
+	ForeGround		0x13be
 }
 
 elem BackGrounds
 {
-	BLUESLAB		0xE10	// Raised edge (blocky)
-	GOLDTRIM		0xA3C	// Gold-press, black backing
-	OLD_SCROLL		0x1432	// Plain yellowish scroll
-	OLD_JOURNAL_SCROLL	0x141E	// Same as above but with up/down arrows and other buttons
-	YELLOW_SCROLL		0x24A4	// Scroll with yellow colored paper.
-	WHITE_SCROLL		0x24AE	// Scroll with white(gray?) colored paper.
-	PAPER			0xBB8	// Very thin edging
-	FANCY_PAPER		0xDAC	//  \_ PAPER with fancy inner border
-	YELLOW_PAPER		0x2454	// Plain yellow colored paper
-	WHITE_PAPER		0x2486	// Same as above but white	
-	STONESLAB		0x13BE	// Stone (mabrble?) background
-	STONESLAB_SQUARE	0x2422	// Same as above but squared with a two line border
-	STONESLAB_SQUARE_B	0x242C	// Same as above but with a neutral gray color
-	SCROLL			0x9D8	// UO journal scroll
-	SILVERTRIM		0x53	// Fancy, dark-grey backing with a silver border
+	SILVERTRIM			0x53	// Fancy, dark-grey backing with a silver border
+	SCROLL				0x9D8	// UO journal scroll
+	OPTIONS_MENU			0xA28	// Marble gump with rounded corners seen in the options menus
+	GOLDTRIM				0xA3C	// Gold-press, black backing
+	PAPER				0xBB8	// Very thin edging
+	FANCY_PAPER			0xDAC	//  \_ PAPER with fancy inner border
+	BLUESLAB				0xE10	// Raised edge (blocky)
+	STONESLAB			0x13BE	// Stone (mabrble?) background
+	LIGHT_STONE			0x13EC	// Similar to DARK_STONE but much lighter
+	DARK_STONE			0x1400	// Dark colored stone with rounded corners
+	OLD_JOURNAL_SCROLL		0x141E	// Same as above but with up/down arrows and other buttons
+	OLD_SCROLL			0x1432	// Plain yellowish scroll
+	STONESLAB_SQUARE		0x2422	// Same as above but squared with a two line border
+	STONESLAB_SQUARE_B		0x242C	// Same as above but with a neutral gray color
+	YELLOW_PAPER			0x2454	// Plain yellow colored paper
+	WHITE_PAPER			0x2486	// Same as above but white	
+	YELLOW_SCROLL			0x24A4	// Scroll with yellow colored paper.
+	WHITE_SCROLL			0x24AE	// Scroll with white(gray?) colored paper.
 	ROUND_GOLDTRIM_DARK	0x24B8	// Gray gump with rounded edges and gold border
-	ROUND_GOLDTRIM_LIGHT	0x24B8	// Same as above but the gray is lighter in color
+	ROUND_GOLDTRIM_LIGHT	0x24EA	// Same as above but the gray is lighter in color
 	ROUND_SILVERTRIM_DARK	0x254E	// Gray gump with rounded edges and silver border
-	ROUND_GOLDTRIM_LIGHT	0x255E	// Same as above but the gray is lighter in color
-	DARK_STONE		0x1400	// Dark colored stone with rounded corners
-	LIGHT_STONE		0x13EC	// Similar to DARK_STONE but much lighter
-	OPTIONS_MENU		0xA28	// Marble gump with rounded corners seen in the options menus
+	ROUND_SILVERTRIM_LIGHT	0x2560	// Same as above but the gray is lighter in color
 }
 
 elem CheckBoxes
