--- a/099/pkg/skills/craftingskills/tinkering/itemdesc.cfg
+++ b/099/pkg/skills/craftingskills/tinkering/itemdesc.cfg
@@ -28,6 +28,14 @@ Item 0x1eb8
 	VendorBuysFor	70
 }
 
+Item 0x1eb9
+{
+	Name			toolkit
+	Script		newtinkering
+	VendorSellsFor	210
+	VendorBuysFor	70
+}
+
 Item  0x1053
 {
 	Name			Gears
