--- a/trunk/099/pkg/skills/craftingskills/tinkering/tinkering.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/tinkering.cfg
@@ -229,17 +229,19 @@ tinkeritem 0x10e4
 tinkeritem 0x1051
 {
 	name			axle and gears
-	material		1
+	parts			0x105b 0x1053 1 1
 	skill		50
 	stackable		1
+	Assemble		1
 }
 
 tinkeritem 0x104f
 {
 	name			clock parts
-	material		1
+	parts			0x1051 0x105d 1 1
 	skill		40
 	stackable		1
+	Assemble		1
 }
 
 tinkeritem 0x14FB
@@ -802,7 +804,7 @@ tinkeritem 0x108a
 tinkeritem 0x104c
 {
 	name			a clock
-	material		1
+	parts			0x104e 0x104f 1 1
 	skill		60
 }
 
