--- a/trunk/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
@@ -26,7 +26,7 @@
 Craftitem Index
 {
 	//Index Menus	
-	Title	<center>Tinkering Selection Menu</center>
+	Title	Tinkering Selection Menu
 	Skill	Tinkering
 	SkillID	Tinkering
 
@@ -169,7 +169,7 @@ Craftitem Parts
 {
 	//Sub Selections
 	Item    Axle
-	Item    Axlewithgears
+	Item    Axleandgears
 	Item    BarrelHoops
 	Item    BarrelTap
 	Item    ClockFrame
